# tap-dynamodb

./: meltano.yml  pyproject.toml
tap_dynamodb/: client.py  deserialize.py  dynamodb.py  schema.py  streams.py  tap.py
tap_dynamodb/sync_strategies/: full_table.py  log_based.py
tap_dynamodb/tests/: test_core.py
