[tool.poetry]
name = "tap-dynamodb"
version = "0.0.1"
description = "`tap-dynamodb` is a Singer tap for DynamoDB, built with the Meltano SDK for Singer Taps."
authors = ["Josh Lloyd"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
requests = "^2.28.2"
singer-sdk = "^0.19.0"
boto3 = "^1.26.59"
singer-python = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "*.*.*"
flake8 = "*.*.*"
black = "*.*.*"
pydocstyle = "*.*.*"
mypy = "*.*.*"
isort = "*.*.*"
requests-mock = "*.*.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dynamodb = 'tap_dynamodb.tap:TapDynamoDB.cli'
